--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -1,17 +1,63 @@
-<mat-sidenav-container class="container">
+<!--<mat-sidenav-container class="container">
   <mat-sidenav #sidenav class="mat-elevation-z0"
   [opened]="!isItSmall()"
   [mode]=" isItSmall()? 'push': 'side'">
     <mat-toolbar>
       <mat-icon>home</mat-icon>
-      <span>Company</span>
+      <span>Company Name</span>
     </mat-toolbar>
+
     <mat-nav-list>
-      List ....
-      List ....
-      <!-- <a mat-list-item [routerLink]="['/manager', speaker.id]"
+      <div class="profile-card">
+          <div class="header">
+              <h2>User NAME</h2>
+              <h4>example@email.com</h4>
+          </div>
+          <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="User name">
+      </div>
+
+      <mat-divider></mat-divider>
+
+      <h2 matSubheader>Pages</h2>
+
+      <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Dashboard</a>
+      <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Posts</a>
+      <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Articles</a>
+
+      <mat-divider></mat-divider>
+
+      <h2 matSubheader>Account</h2>
+
+      <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+          <mat-icon>import_contacts</mat-icon>
+          Contacts
+      </a>
+
+      <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-icon>account_circle</mat-icon>
+          </mat-expansion-panel-header>
+          <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+            <mat-icon>contact_phone</mat-icon>
+            Profil
+        </a>
+        </mat-expansion-panel>
+      </mat-accordion>
+
+       <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+          <mat-icon>contact_phone</mat-icon>
+          Leads
+      </a>
+
+  </mat-nav-list>
+
+
+    <mat-nav-list>
+       <a mat-list-item [routerLink]="['/manager', speaker.id]"
                 *ngFor="let speaker of mySpeakers">
-                   {{ speaker?.first_name }} </a> -->
+                   {{ speaker?.first_name }} </a>
     </mat-nav-list>
 
   </mat-sidenav>
@@ -22,4 +68,52 @@
     </div>
   </mat-sidenav-content>
 
-</mat-sidenav-container>
+</mat-sidenav-container>-->
+
+
+<mat-nav-list>
+  <div class="profile-card">
+      <div class="header">
+          <h2>User NAME</h2>
+          <h4>example@email.com</h4>
+      </div>
+      <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="User name">
+  </div>
+
+  <mat-divider></mat-divider>
+
+  <!-- <h2 matSubheader>Pages</h2> -->
+
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Dashboard</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/cv">CV</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Articles</a>
+
+  <mat-divider></mat-divider>
+
+  <h2 matSubheader>Account</h2>
+
+  <!-- <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+      <mat-icon>import_contacts</mat-icon>
+      Contacts
+  </a> -->
+
+  <mat-accordion >
+    <mat-expansion-panel >
+      <mat-expansion-panel-header>
+        <mat-icon>account_circle</mat-icon>
+      </mat-expansion-panel-header>
+      <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+        <!-- <mat-icon>contact_phone</mat-icon>
+                (opened)="panelOpenState = true"
+                         (closed)="panelOpenState = false"-->
+        Profil
+    </a>
+    </mat-expansion-panel>
+  </mat-accordion>
+
+  <!-- <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
+      <mat-icon>contact_phone</mat-icon>
+      Leads
+  </a> -->
+
+</mat-nav-list>
