--- a/src/app/recruitment-manager/component/cv/cv-form/cv-form.component.html
+++ b/src/app/recruitment-manager/component/cv/cv-form/cv-form.component.html
@@ -1,26 +1,38 @@
 <mat-vertical-stepper [linear]="isLinear" #stepper>
   <mat-step [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup" class="form">
+    <form [formGroup]="firstFormGroup" (ngSubmit)="addCv()">
       <ng-template matStepLabel>Profil</ng-template>
-      <mat-form-field class="full-width">
+      <mat-form-field class="full-width" appearance="outline">
         <mat-label>Nom</mat-label>
         <input matInput placeholder="Nom" formControlName="firstName" required>
       </mat-form-field>
-      <mat-form-field class="full-width">
+      <mat-form-field class="full-width" appearance="outline">
         <mat-label>Prenom</mat-label>
-        <input matInput placeholder="Prenom" formControlName="lastName" required>
+        <input matInput placeholder="Prenom" formControlName="lastName" >
       </mat-form-field>
-      <mat-form-field class="full-width">
+      <mat-form-field class="full-width" appearance="outline">
         <mat-label>Numero</mat-label>
-        <input matInput placeholder="Numero" formControlName="phoneNumer" required>
+        <input matInput placeholder="Numero" formControlName="phoneNumer" >
       </mat-form-field>
+      <mat-form-field class="full-width" appearance="outline">
+        <input matInput
+        placeholder="Langue"
+        formControlName="langues"
+        [matAutocomplete]="auto" required>
+ <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+   <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+     {{option}}
+   </mat-option>
+ </mat-autocomplete>
+      </mat-form-field>
+
       <div>
-        <button mat-button matStepperNext title="NEXT"><mat-icon>navigate_next</mat-icon></button>
+        <button mat-button matStepperNext title="NEXT" type="submit"><mat-icon>navigate_next</mat-icon></button>
       </div>
     </form>
   </mat-step>
   <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup">
+    <form [formGroup]="secondFormGroup" (ngSubmit)="addExperience()">
       <ng-template matStepLabel>EXPERIENCE</ng-template>
       <mat-form-field class="full-width">
         <mat-label>Titre</mat-label>
@@ -36,7 +48,7 @@
       </mat-form-field>
       <div>
         <button mat-button matStepperPrevious title="Back"><mat-icon>navigate_before</mat-icon></button>
-        <button mat-button matStepperNext title="Next"><mat-icon>navigate_next</mat-icon></button>
+        <button mat-button matStepperNext title="Next" type="submit"><mat-icon>navigate_next</mat-icon></button>
       </div>
     </form>
   </mat-step>
@@ -47,7 +59,7 @@
       <form [formGroup]="thirdFormGroup" (ngSubmit)="addFormationList()">
         <div formArrayName="formation" *ngFor="let study of studies.controls; let i=index">
           <div [formGroupName]="i">
-            <mat-form-field class="full-width">
+            <mat-form-field class="full-width" appearance="outline">
               <mat-label>Etablissement</mat-label>
               <input matInput formControlName="etablissement" placeholder="Etablissement" >
             </mat-form-field>
@@ -55,11 +67,11 @@
 
             <button mat-button title="Supprimer cette formation" (click)="deleteFormation(i)"><mat-icon>close</mat-icon>
             </button>
-            <mat-form-field class="full-width">
+            <mat-form-field class="full-width" appearance="outline">
               <mat-label>Domaine</mat-label>
               <input matInput formControlName="domaine" placeholder="Domaine" >
             </mat-form-field>
-            <mat-form-field class="full-width">
+            <mat-form-field class="full-width" appearance="outline">
               <mat-label>Niveau</mat-label>
               <input matInput formControlName="niveau" placeholder="Niveau" >
             </mat-form-field>
@@ -72,10 +84,10 @@
         </div>
       </form>
 
-      <div>
+      <!-- <div>
         <button mat-button (click)="addCv()">Sava</button>
-        <!-- <button mat-button (click)="stepper.reset()">Reset</button> -->
-      </div>
+        <button mat-button (click)="stepper.reset()">Reset</button>
+      </div> -->
     </mat-step>
   </div>
 
