--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -74,8 +74,8 @@
 <mat-nav-list>
   <div class="profile-card">
       <div class="header">
-          <h2>User NAME</h2>
-          <h4>example@email.com</h4>
+          <h2>Nom d'utilisateur</h2>
+          <h4>utilisateur@email.com</h4>
       </div>
       <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="User name">
   </div>
