--- a/src/app/recruitment-manager/component/cv/cv-form/cv-form.component.html
+++ b/src/app/recruitment-manager/component/cv/cv-form/cv-form.component.html
@@ -31,6 +31,38 @@
       </div>
     </form>
   </mat-step>
+  <mat-step>
+    <form>
+      <ng-template matStepLabel>COPETENCE</ng-template>
+      <mat-form-field class="full-width" appearance="outline">
+        <mat-label>Competence</mat-label>
+        <mat-chip-list #chipList aria-label="Competence selection">
+          <mat-chip
+            *ngFor="let fruit of fruits"
+            [selectable]="selectable"
+            [removable]="removable"
+            (removed)="remove(fruit)">
+            {{fruit}}
+            <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
+          </mat-chip>
+          <input
+            placeholder="New competence..."
+            #fruitInput
+            [formControl]="fruitCtrl"
+            [matAutocomplete]="auto"
+            [matChipInputFor]="chipList"
+            [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+            (matChipInputTokenEnd)="add($event)">
+        </mat-chip-list>
+        <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selected($event)">
+          <mat-option *ngFor="let fruit of filteredFruits | async" [value]="fruit">
+            {{fruit}}
+          </mat-option>
+        </mat-autocomplete>
+      </mat-form-field>
+
+    </form>
+  </mat-step>
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup" (ngSubmit)="addExperience()">
       <ng-template matStepLabel>EXPERIENCE</ng-template>
@@ -56,7 +88,7 @@
     <mat-step [stepControl]="thirdFormGroup">
 
       <ng-template matStepLabel>FORMATION</ng-template>
-      <form [formGroup]="thirdFormGroup" (ngSubmit)="addFormationList()">
+      <form [formGroup]="thirdFormGroup" >
         <div formArrayName="formation" *ngFor="let study of studies.controls; let i=index">
           <div [formGroupName]="i">
             <mat-form-field class="full-width" appearance="outline">
@@ -79,7 +111,7 @@
         </div>
 
         <div>
-          <button type="submit" mat-button>SubmitBtn</button>
+          <button (click)="addFormationList()" mat-button>Ajouter une formation</button>
           <!-- <button class="add" mat-button fxFill (click)="deleteClass()">Supprimer</button> -->
         </div>
       </form>
