--- a/src/app/recruitment-manager/component/offer/offer-list/offer-list.component.html
+++ b/src/app/recruitment-manager/component/offer/offer-list/offer-list.component.html
@@ -1,33 +1,58 @@
-<div fxFlex="100" fxLayout="row" class="flex-container">
-  <div fxFlex="25" fxLayout="column" class="flex-filter">
-    <div fxLayout="row" fxLayoutAlign="start center">
-      <button mat-raised-button color="primary" (click)="showAdd()">
+<div  class="flex-container">
+  <div class="flex-filter">
+    <mat-form-field appearance="fill" class="field">
+      <mat-label>Filtez par domaine</mat-label>
+      <mat-select [formControl]="toppings" multiple>
+        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="fill" class="field">
+      <mat-label>Filtrez par Experience</mat-label>
+      <mat-select [formControl]="toppings" multiple>
+        <mat-option *ngFor="let topping of toppingList" [value]="topping">{{topping}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <div class="addBtn">
+      <button mat-raised-button color="primary" [routerLink]="['/newOffer']">
         <i class="material-icons">add</i> Ajouter
       </button>
     </div>
-    <a href="#">lien1</a>
-    <a href="#">lien2</a>
-    <a href="#">lien3</a>
   </div>
-  <div fxLayoutGap="20px" class="flx-item" *ngFor="let item of offers">
-    <mat-card class="offer-card">
-      <mat-card-header>
-        <mat-card-title>{{item.title}}</mat-card-title>
-        <mat-card-subtitle>{{item.expireDate}}</mat-card-subtitle>
-      </mat-card-header>
-      <mat-card-content>
-        <h5>Description</h5>
-        <p><a href="#">{{item.description}}</a></p>
-        <!-- <p><a href="#" [routerLink]="['/offers', item.id]">{{item.description}}</a></p> -->
-      </mat-card-content>
-      <!-- <mat-card-actions><button mat-button type="submit"
-        (click)="detail()">DETAIL</button></mat-card-actions>-->
-    </mat-card>
+  <div id="main">
+    <div  class="flx-item" *ngFor="let item of offers">
+      <mat-card class="offer-card" id="card">
+        <mat-card-header class="head">
+          <mat-card-title>{{item.title}}</mat-card-title>
+          <mat-card-subtitle>{{item.expireDate}}</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content class="desc">
+          <!-- <h5>Description</h5> -->
+          <!-- <p><a href="#">{{item.description}}</a></p> -->
+          <p><a  [routerLink]="['/offers', item.id]">{{item.description}}</a></p>
+        </mat-card-content>
+        <!-- <mat-card-actions><button mat-button type="submit"
+          (click)="detail()">DETAIL</button></mat-card-actions>
+        fxFlex="100" fxLayout="row" fxLayoutGap="20px"-->
+      </mat-card>
+    </div>
 
-    <mat-card class="offer-card">offer-list works!</mat-card>
-
+  </div>
+  <div class="footer">
     <mat-paginator [length]="10" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]">
     </mat-paginator>
-  </div>
 
+  </div>
 </div>
+
+<!-- <div class="fullCard">
+  <div class="cardContent">
+    <div class="cardText">
+      <div class="filterSection">
+
+      </div>
+      <div class="list">
+
+      </div>
+    </div>
+  </div>
+</div> -->
