competences, cvManager module

--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -84,9 +84,9 @@
 
   <!-- <h2 matSubheader>Pages</h2> -->
 
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Dashboard</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">List des offres</a>
   <a mat-list-item routerLinkActive="list-item-active" routerLink="/cv">CV</a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">Articles</a>
+  <a mat-list-item routerLinkActive="list-item-active" (click)="userJobList()">Candidatures</a>
 
   <mat-divider></mat-divider>
 
