--- a/src/app/recruitment-manager/component/offer/offer-detail/offer-detail.component.html
+++ b/src/app/recruitment-manager/component/offer/offer-detail/offer-detail.component.html
@@ -1,1 +1,30 @@
-<p>offer-detail works!</p>
+<div class="contenair" id="top">
+  <div class="content">
+    <div class="contentBody" *ngIf="offer$ | async as offer">
+      <mat-card>
+        <mat-card-subtitle>{{offer.title}}</mat-card-subtitle>
+        <div>{{offer.description}}</div>
+      </mat-card>
+        <!-- <mat-accordion>
+          <mat-expansion-panel (opened)="panelOpenState = true" (closed)="panelOpenState = false">
+            <mat-expansion-panel-header>
+              <mat-panel-title>
+                Role Description
+              </mat-panel-title>
+              <mat-panel-description>
+              </mat-panel-description>
+            </mat-expansion-panel-header>
+            <p>I'm visible because I am open</p>
+          </mat-expansion-panel>
+        </mat-accordion> -->
+        <mat-card><mat-card-subtitle>ROLE</mat-card-subtitle>
+        <div>{{offer.description}}</div></mat-card>
+            <mat-card>
+              <mat-card-subtitle>COMPETENCE REQUISE</mat-card-subtitle>
+              <mat-card-content>{{offer.description}}</mat-card-content>
+            </mat-card>
+
+      <div id="apply"><button mat-button (click)="postuler(offer.id)">Postuler</button></div>
+    </div>
+  </div>
+</div>
