--- a/src/app/recruitment-manager/component/offer/offer-list/offer-list.component.html
+++ b/src/app/recruitment-manager/component/offer/offer-list/offer-list.component.html
@@ -1,4 +1,4 @@
-<div  class="flex-container">
+<div class="flex-container">
   <div class="flex-filter">
     <mat-form-field appearance="fill" class="field">
       <mat-label>Filtez par domaine</mat-label>
@@ -18,8 +18,8 @@
       </button>
     </div>
   </div>
-  <div id="main">
-    <div  class="flx-item" *ngFor="let item of offers">
+  <div id="main" *ngIf="offers$ | async as offers">
+    <div class="flx-item" *ngFor="let item of offers">
       <mat-card class="offer-card" id="card">
         <mat-card-header class="head">
           <mat-card-title>{{item.title}}</mat-card-title>
@@ -28,7 +28,7 @@
         <mat-card-content class="desc">
           <!-- <h5>Description</h5> -->
           <!-- <p><a href="#">{{item.description}}</a></p> -->
-          <p><a  [routerLink]="['/offers', item.id]">{{item.description}}</a></p>
+          <p><a [routerLink]="['/offers', item.id]">{{item.description}}</a></p>
         </mat-card-content>
         <!-- <mat-card-actions><button mat-button type="submit"
           (click)="detail()">DETAIL</button></mat-card-actions>
