--- a/src/app/recruitment-manager/component/offer/user-job-list/user-job-list.component.html
+++ b/src/app/recruitment-manager/component/offer/user-job-list/user-job-list.component.html
@@ -1,18 +1,14 @@
-<div *ngIf="!userSelectedOffers$">
+<div *ngIf="!noData" fxFlex fxFill>
   <div> VOus n'avez pas encore postuler aux offres</div>
  </div>
-<div *ngIf="userSelectedOffers$ | async as userOffers" fxLayout="row">
+ <div *ngIf="userSelectedOffers$ | async as userOffers" fxLayout='row'
+ fxLayoutAlign="center " class="wrapThis"><!-- fxLayout="row" -->
   <div class="fullCard" id="thumbnail" *ngFor="let item of userOffers">
     <div class="cardContent" >
       <div class="cardText" >
         <h4 >{{item.title}}</h4>
-        <!-- <hr> -->
         <mat-divider></mat-divider>
         <p><em>{{item.description}}</em></p>
-      </div>
-      <div class="cardLinks">
-        <a href="https://en.wikipedia.org/wiki/Larry_Page" target="_blank" class="links">Larry Page</a><br><br>
-        <a href="https://en.wikipedia.org/wiki/Sergey_Brin" target="_blank" class="links">Sergey Brin</a>
       </div>
     </div>
   </div>
