--- a/src/app/recruitment-manager/component/offer/user-job-list/user-job-list.component.scss
+++ b/src/app/recruitment-manager/component/offer/user-job-list/user-job-list.component.scss
@@ -32,3 +32,6 @@ opacity: 0.7; // 0 = fully transparent 1 = fully opaque, 0.5 = transparent
 .cardText {
   margin-bottom: 30px;
 }
+.wrapThis{
+  flex-wrap: wrap;
+}
