--- a/src/app/layout/side-nav/side-nav.component.html
+++ b/src/app/layout/side-nav/side-nav.component.html
@@ -85,7 +85,7 @@
   <!-- <h2 matSubheader>Pages</h2> -->
 
   <a mat-list-item routerLinkActive="list-item-active" routerLink="/offers">List des offres</a>
-  <a mat-list-item routerLinkActive="list-item-active" routerLink="/cv">CV</a>
+  <a mat-list-item routerLinkActive="list-item-active" routerLink="/cv">Cv</a>
   <a mat-list-item routerLinkActive="list-item-active" (click)="userJobList()">Candidatures</a>
 
   <mat-divider></mat-divider>
@@ -97,19 +97,19 @@
       Contacts
   </a> -->
 
-  <mat-accordion >
+  <!-- <mat-accordion >
     <mat-expansion-panel >
       <mat-expansion-panel-header>
         <mat-icon>account_circle</mat-icon>
       </mat-expansion-panel-header>
       <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
-        <!-- <mat-icon>contact_phone</mat-icon>
+        <mat-icon>contact_phone</mat-icon>
                 (opened)="panelOpenState = true"
-                         (closed)="panelOpenState = false"-->
+                         (closed)="panelOpenState = false"
         Profil
     </a>
     </mat-expansion-panel>
-  </mat-accordion>
+  </mat-accordion> -->
 
   <!-- <a mat-list-item routerLinkActive="list-item-active" routerLink="/contacts">
       <mat-icon>contact_phone</mat-icon>
